# ecl

./: .gitignore  .gitmodules  .travis.yml  .travis_pip.sh  .travis_script.sh  CMakeLists.txt  MANIFEST.in  config.sh  requirements-dev.txt  requirements.txt  setup.py
applications/: CMakeLists.txt
lib/: CMakeLists.txt
lib/ecl/: ecl_smspec.cpp  ecl_sum.cpp  ecl_sum_data.cpp  ecl_sum_file_data.cpp  ecl_unsmry_loader.cpp
lib/include/ert/ecl/: ecl_sum.hpp  ecl_sum_data.hpp
lib/include/ert/util/: type_macros.hpp  util.h
lib/private-include/detail/ecl/: ecl_sum.hpp  ecl_sum_data.hpp  ecl_sum_file_data.hpp  ecl_unsmry_loader.hpp
python/: CMakeLists.txt  module-CMakeLists.txt  requirements-dev.txt  setup-CMakeLists.txt  setup.py
python/ecl/: CMakeLists.txt  __init__.py
python/ecl/_native/: __init__.cpp  cwrap.cpp  summary.cpp
python/ecl/ext/: __init__.py  lib.cpp
python/ecl/summary/: ecl_sum.py
python/tests/ecl_tests/: test_ecl_file.py  test_ecl_kw.py  test_ecl_sum_tstep.py  test_grid.py  test_grid_generator.py
python/tests/util_tests/: test_path_context.py  test_version.py
